--- a/app/index.html
+++ b/app/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" />
-		<link rel="stylesheet" href="css/libs.min.css" />
-		<link rel="stylesheet" href="css/style.min.css" />
-		<title>Новости</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" />
+	<link rel="stylesheet" href="css/libs.min.css" />
+	<link rel="stylesheet" href="css/style.min.css" />
+	<title>Новости</title>
+</head>
 
-	<body>
-		<div class="wrapper">
-			<header class="header"></header>
-			<main class="main"></main>
-			<footer class="footer"></footer>
-		</div>
-		<script src="js/scripts.min.js"></script>
-	</body>
+<body>
+	<div class="wrapper">
+		<header class="header">
+			<div class="container">
+				<nav class="nav grid">
+					<a href="#" class="nav__logo">
+						<svg class="nav__logo-icon">
+							<use xlink:href="images/sprite.svg#logo"></use>
+						</svg>
+					</a>
+					<ul class="nav__list">
+						<li class="nav__item"><a href="#" class="nav__link nav__link--active">Главная</a></li>
+						<li class="nav__item"><a href="#" class="nav__link">Мода</a></li>
+						<li class="nav__item"><a href="#" class="nav__link">Технология</a></li>
+						<li class="nav__item"><a href="#" class="nav__link">Музыка</a></li>
+						<li class="nav__item"><a href="#" class="nav__link">Фильмы</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main class="main"></main>
+		<footer class="footer">
+			<div class="container">
+				<div class="copy grid">
+					<div class="copy__content">
+						<span class="copy__text">Все правы защищены</span>
+						<a class="copy__link" href="vk.com" target="_blank">Атабегов А.</a>
+					</div>
+					<p class="copy__year">© 2021</p>
+				</div>
+			</div>
+		</footer>
+	</div>
+	<script src="js/scripts.min.js"></script>
+</body>
+
 </html>
