--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<!--=include ../components/head/_head.html -->\
+<!--=include ../components/head/_head.html -->
 
-	<body>
-		<div class="wrapper">
-			<!--=include ../components/header/_header.html -->
-			<main class="main"></main>
-			<!--=include ../components/footer/_footer.html -->
-		</div>
-		<script src="js/scripts.min.js"></script>
-	</body>
+<body>
+	<div class="wrapper">
+		<!--=include ../components/header/_header.html -->
+		<main class="main"></main>
+		<!--=include ../components/footer/_footer.html -->
+	</div>
+	<script src="js/scripts.min.js"></script>
+</body>
+
 </html>
