component main and small article

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -5,7 +5,7 @@
 <body>
 	<div class="wrapper">
 		<!--=include ../components/header/_header.html -->
-		<main class="main"></main>
+		<!--=include ../components/sections/main/_main.html -->		
 		<!--=include ../components/footer/_footer.html -->
 	</div>
 	<script src="js/scripts.min.js"></script>
